# labas2

./: CMakeLists.txt  hw2.1.cpp  hw2.2.cpp  hw2.3.cpp  hw3.1 (2).cpp  hw3.1 (2).hpp  hw3.1(final).cpp  hw3.1(final).h  hw3.1_2.hpp  hw3.1_test(final).h  hw3.2 (2).cpp  laba4.cpp  laba5.cpp  laba6.cpp  laba7(2).c  laba7.cpp  laba8 (2).cpp  laba9 (2).cpp
